--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@
             >
             <ul class="header-menu list">
               <li class="header-menu-item">
-                <a href="./index.html" class="header-menu-link link">Studio</a>
+                <a href="./index.html" class="header-menu-link current link"
+                  >Studio</a
+                >
               </li>
               <li class="header-menu-item">
-                <a href="" class="header-menu-link link">Portfolio</a>
+                <a href="#portfolio" class="header-menu-link link">Portfolio</a>
               </li>
               <li class="header-menu-item">
-                <a href="" class="header-menu-link link">Contacts</a>
+                <a href="#contacts" class="header-menu-link link">Contacts</a>
               </li>
             </ul>
           </nav>
 
-          <address class="header-address">
+          <address class="header-address" id="contacts">
             <ul class="header-address-list list">
               <li class="header-address-item">
                 <a
@@ -391,7 +393,7 @@
         <!--------------------------->
 
         <!-----PORTFOLIO----->
-        <section class="portfolio section">
+        <section class="portfolio section" id="portfolio">
           <div class="container portfolio-container">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list list">
