--- a/index.html
+++ b/index.html
@@ -586,6 +586,30 @@
           </div>
         </div>
       </footer>
+      <div class="backdrop">
+        <div class="modal">
+          <button type="button" class="modal-btn">
+            <svg class="modal-btn-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <p class="modal-title">
+            Leave your contacts and we will call you back
+          </p>
+          <form class="modal-form">
+            <input type="name" name="user-name" required class="modal-input" />
+            <input type="tel" name="user-phone" class="modal-input" />
+            <input
+              type="email"
+              name="user-email"
+              required
+              placeholder="Enter email"
+              class="modal-input"
+            />
+            <button type="submit" class="modal-form-btn">Send</button>
+          </form>
+        </div>
+      </div>
     </div>
     <!------------------------------>
   </body>
