--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
       <div class="backdrop">
         <div class="modal">
           <button type="button" class="modal-btn">
-            <svg class="modal-btn-icon" width="24" height="24">
+            <svg class="modal-btn-icon" width="8" height="8">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
@@ -597,15 +597,75 @@
             Leave your contacts and we will call you back
           </p>
           <form class="modal-form">
-            <input type="name" name="user-name" required class="modal-input" />
-            <input type="tel" name="user-phone" class="modal-input" />
-            <input
-              type="email"
-              name="user-email"
-              required
-              placeholder="Enter email"
-              class="modal-input"
-            />
+            <div class="modal-field">
+              <label for="user-name" class="modal-label">Name</label>
+              <div class="input-wrap">
+                <input
+                  type="text"
+                  name="user-name"
+                  required
+                  id="user-name"
+                  class="modal-input"
+                />
+                <svg class="input-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-field">
+              <label for="user-phone" class="modal-label">Phone</label>
+              <div class="input-wrap">
+                <input
+                  type="tel"
+                  name="user-phone"
+                  id="user-phone"
+                  class="modal-input"
+                />
+                <svg class="input-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-field">
+              <label for="user-email" class="modal-label">Email</label>
+              <div class="input-wrap">
+                <input
+                  type="email"
+                  name="user-email"
+                  required
+                  id="user-email"
+                  class="modal-input"
+                />
+                <svg class="input-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-field">
+              <label for="user-text" class="modal-label">Comment</label>
+              <textarea
+                name="user-text"
+                id="user-text"
+                cols="30"
+                rows="10"
+                placeholder="Text input"
+                class="modal-textarea"
+              ></textarea>
+            </div>
+            <div class="modal-field">
+              <input
+                type="checkbox"
+                name="terms"
+                id="terms"
+                required
+                class="modal-check"
+              />
+              <label class="check-text" for="terms"
+                >I accept the terms and conditions of the
+                <a href="" class="check-text-policy">Privacy Policy</a></label
+              >
+            </div>
+
             <button type="submit" class="modal-form-btn">Send</button>
           </form>
         </div>
