--- a/index.html
+++ b/index.html
@@ -584,8 +584,28 @@
               </li>
             </ul>
           </div>
+          <div class="footer-container-form">
+            <p class="form-text">Subscribe</p>
+            <form class="footer-form">
+              <label for="user-email">
+                <input
+                  type="email"
+                  name="user-email"
+                  id="user-email"
+                  required
+                  placeholder="E-mail"
+                  class="footer-form-input"
+              /></label>
+              <button type="submit" class="footer-form-btn">
+                Subscribe<svg class="footer-form-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-frame"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </footer>
+      <!-------MODAL-------->
       <div class="backdrop">
         <div class="modal">
           <button type="button" class="modal-btn">
@@ -627,13 +647,13 @@
               </div>
             </div>
             <div class="modal-field">
-              <label for="user-email" class="modal-label">Email</label>
+              <label for="email" class="modal-label">Email</label>
               <div class="input-wrap">
                 <input
                   type="email"
-                  name="user-email"
+                  name="email"
                   required
-                  id="user-email"
+                  id="email"
                   class="modal-input"
                 />
                 <svg class="input-icon" width="18" height="24">
@@ -646,21 +666,23 @@
               <textarea
                 name="user-text"
                 id="user-text"
-                cols="30"
-                rows="10"
                 placeholder="Text input"
                 class="modal-textarea"
               ></textarea>
             </div>
-            <div class="modal-field">
+            <div class="modal-field-checkbox">
               <input
                 type="checkbox"
                 name="terms"
                 id="terms"
+                value=""
                 required
-                class="modal-check"
+                class="modal-check visually-hidden"
               />
               <label class="check-text" for="terms"
+                ><span class="check-text-box"
+                  ><svg class="check-text-icon" width="10" height="10">
+                    <use href="./images/icons.svg#icon-check"></use></svg></span
                 >I accept the terms and conditions of the
                 <a href="" class="check-text-policy">Privacy Policy</a></label
               >
