--- a/index.html
+++ b/index.html
@@ -660,11 +660,11 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
-            <label for="user-text" class="modal-label">Comment</label>
+          <div class="modal-field-textarea">
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
-              name="user-text"
-              id="user-text"
+              name="user-comment"
+              id="user-comment"
               placeholder="Text input"
               class="modal-textarea"
             ></textarea>
@@ -672,16 +672,17 @@
           <div class="modal-field-checkbox">
             <input
               type="checkbox"
-              name="terms"
-              id="terms"
-              value=""
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
               required
               class="modal-check visually-hidden"
             />
-            <label class="check-text" for="terms"
-              ><span class="check-text-box"
-                ><svg class="check-text-icon" width="10" height="10">
-                  <use href="./images/icons.svg#icon-check"></use></svg></span
+            <label class="check-text" for="user-privacy">
+              <span class="check-text-box">
+                <svg class="check-text-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg> </span
               >I accept the terms and conditions of the
               <a href="" class="check-text-policy">Privacy Policy</a></label
             >
