--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
         <div class="footer-container-form">
           <p class="form-text">Subscribe</p>
           <form class="footer-form">
-            <label for="user-email">
+            <label for="user-email" class="footer-form-label">
               <input
                 type="email"
                 name="user-email"
@@ -607,7 +607,7 @@
     </footer>
     <!--</div>-->
     <!-------MODAL-------->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -678,13 +678,15 @@
               required
               class="modal-check visually-hidden"
             />
-            <label class="check-text" for="user-privacy">
-              <span class="check-text-box">
-                <svg class="check-text-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-check"></use>
-                </svg> </span
-              >I accept the terms and conditions of the
-              <a href="" class="check-text-policy">Privacy Policy</a></label
+            <label class="check-text" for="user-privacy"
+              ><span class="check-text-box"
+                ><svg class="check-text-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use></svg></span
+              >I accept the terms and conditions of the<a
+                href=""
+                class="check-text-policy"
+                >Privacy Policy</a
+              ></label
             >
           </div>
 
