--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
     </footer>
     <!--</div>-->
     <!-------MODAL-------->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
